--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,11 @@
       "source": "Git Bash"
     }
   },
-  "terminal.integrated.defaultProfile.windows": "Git Bash"
+  "terminal.integrated.defaultProfile.windows": "Git Bash",
+  "emmet.preferences": {},
+  "emmet.variables": {
+    "lang": "pt-br",
+    "charset": "UTF-8"
+
+  }
 }
