feat: Added the final exercise 'creating a website with HTML and CSS.'

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
   "editor.tabSize": 2, // Define o tamanho da tabulação como 2 espaços
   "editor.bracketPairColorization.enabled": true, // Ativa a colorização dos pares de colchetes
   "editor.guides.bracketPairs": true, //realça os pares de colchetes para facilitar a leitura do código
-  "editor.minimap.enabled": false, // Define se o minimapa esta ativo
+  "editor.minimap.enabled": true, // Define se o minimapa esta ativo
   "editor.formatOnSave": true,
   "editor.formatOnPaste": true,
   "files.autoSave": "afterDelay", // Salvamento automatico, PODE AFETAR EM ALGUNS CÓDIGOS DE EXECUÇÃO AUTOMÁTICA POR SAVE. "afterDelay"
@@ -39,6 +39,5 @@
   "emmet.variables": {
     "lang": "pt-br",
     "charset": "UTF-8"
-
   }
 }
