--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,8 +17,8 @@
 
   // workbench
   "workbench.editor.enablePreview": false,
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.colorTheme": "Omni",
+  "workbench.iconTheme": "vscode-icons",
+  "workbench.colorTheme": "Dracula Theme",
 
   // prettier
   "editor.defaultFormatter": "esbenp.prettier-vscode",
